--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-   <div class="board x circle" id="board">
-       <div class="cell x" data-cell></div>
-       <div class="cell circle" data-cell></div>
-       <div class="cell" data-cell></div>
-       <div class="cell" data-cell></div>
-       <div class="cell" data-cell></div>
-       <div class="cell" data-cell></div>
+   <div class="board" id="board">
+       <div class="cell data-cell" data-cell></div>
+       <div class="cell data-cell" data-cell></div>
+       <div class="cell data-cell" data-cell></div>
+       <div class="cell data-cell" data-cell></div>
+       <div class="cell data-cell" data-cell></div>
+       <div class="cell data-cell" data-cell></div>
        <div class="cell" data-cell></div>
        <div class="cell" data-cell></div>
        <div class="cell" data-cell></div>
@@ -25,4 +25,5 @@
        <button id="restartButton">Restart</button>
    </div>
 </body>
+
 </html>
